Infraestructure/k8s/deployments/kube-prometheus-stack/kube-prometheus-stack.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /monitoring
        backend:
          serviceName: kube-prometheus-stack-grafana
          servicePort: 80
